# cget-recipes

./: .gitignore  .pylintrc  CMakeLists.txt  Makefile  README.md
recipes/ArashPartow/exprtk/: README.md  exprtk.cmake  package.txt
recipes/boost-ext/ut/: README.md  package.txt
recipes/catchorg/Catch2/: package.txt
recipes/chriskohlhoff/asio/: README.md  package.txt
recipes/foonathan/debug_assert/: package.txt
recipes/foonathan/type_safe/: package.txt
recipes/fr00b0/nod/: package.txt
recipes/gabime/spdlog/: package.txt
recipes/jarro2783/cxxopts/: package.txt
recipes/mapbox/eternal/: README.md  package.txt
recipes/microsoft/GSL/: README.md  gsl.cmake  package.txt
recipes/nemtrif/utfcpp/: README.md  package.txt  utfcpp.cmake
recipes/nlohmann/json/: package.txt
recipes/p-ranav/glob/: README.md  package.txt
recipes/pqrs-org/cpp-cf-array/: package.txt
recipes/pqrs-org/cpp-cf-boolean/: package.txt
recipes/pqrs-org/cpp-cf-cf_ptr/: package.txt
recipes/pqrs-org/cpp-cf-dictionary/: package.txt
recipes/pqrs-org/cpp-cf-json/: package.txt  requirements.txt
recipes/pqrs-org/cpp-cf-number/: package.txt
recipes/pqrs-org/cpp-cf-run_loop_thread/: package.txt
recipes/pqrs-org/cpp-cf-set/: package.txt
recipes/pqrs-org/cpp-cf-string/: package.txt
recipes/pqrs-org/cpp-cf-url/: package.txt
recipes/pqrs-org/cpp-cf_array/: package.txt
recipes/pqrs-org/cpp-cf_number/: package.txt
recipes/pqrs-org/cpp-cf_run_loop_thread/: package.txt
scripts/: update-package-version.py
scripts/update-package-version/: Makefile  main.py
(+74 files in other folders)
